--- a/image-service/src/test/resources/application.yaml
+++ b/image-service/src/test/resources/application.yaml
@@ -14,3 +14,7 @@ app:
     username: ${MINIO_USERNAME:user}
     password: ${MINIO_PASSWORD:password}
     bucket: images
+
+api:
+  server:
+    url: http://localhost:8080
